--- a/data/settings.json
+++ b/data/settings.json
@@ -97,7 +97,7 @@
       "fontColor": "#424242"
     },
     "attendee": {
-      "title": "Get to know who are attending",
+      "title": "Get to know who is attending",
       "metaDescription": "Registered participants for DevFest South South 2018",
       "background": {
         "color": "#fff"
