--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^1.6.0",
+    "@grpc/grpc-js": "^0.5.2",
     "child-process-promise": "^2.2.1",
     "cpx": "^1.5.0",
     "express": "^4.16.3",
@@ -27,5 +28,8 @@
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
     "rimraf": "^2.6.2"
+  },
+  "engines": {
+    "node": "8"
   }
 }
