--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "axios": "^0.18.0",
     "body-parser": "~1.18.2",
     "express": "^4.16.3",
-    "firebase-functions": "^2.0.5",
+    "firebase-functions": "^3.2.0",
+    "grpc": "^1.23.3",
     "gulp-live-server": "^0.0.31",
     "gulp-nodemon": "^2.2.1",
     "nodemailer": "^4.6.8",
